@@ -99,6 +99,10 @@ def _admin_views(config):
     config.add_route_7('admin:acme_challenge_log_paginated', '/acme-challenge-logs/{@page}')
     config.add_route_7('admin:acme_challenge_log:focus', '/acme-challenge-log/{@id}')
 
+    config.add_route_7('admin:acme_challenge_log:filtered', '/acme-challenge-logs/filtered')
+    config.add_route_7('admin:acme_challenge_log:filtered|json', '/acme-challenge-logs/filtered.json')
+
+
     # CertificateAuthority Certificates
     config.add_route_7('admin:ca_certificates', '/ca-certificates')
     config.add_route_7('admin:ca_certificates_paginated', '/ca-certificates/{@page}')
