@@ -2,6 +2,7 @@
 from pyramid.response import Response
 from pyramid.view import view_config
 from pyramid.renderers import render, render_to_response
+from pyramid.httpexceptions import HTTPFound
 from pyramid.httpexceptions import HTTPNotFound
 
 # stdlib
@@ -20,7 +21,7 @@ from ..lib.handler import Handler, items_per_page
 # ==============================================================================
 
 
-class ViewAdmin(Handler):
+class ViewAdmin_AcmeEventLog(Handler):
 
     @view_config(route_name='admin:acme_event_log', renderer='/admin/acme_event_log.mako')
     @view_config(route_name='admin:acme_event_log_paginated', renderer='/admin/acme_event_log.mako')
@@ -47,7 +48,9 @@ class ViewAdmin(Handler):
                 'SslAcmeEventLog': item,
                 }
 
-    # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+
+class ViewAdmin_AcmeChallengeLog(Handler):
 
     @view_config(route_name='admin:acme_challenge_log', renderer='/admin/acme_challenge_log.mako')
     @view_config(route_name='admin:acme_challenge_log_paginated', renderer='/admin/acme_challenge_log.mako')
@@ -73,3 +76,43 @@ class ViewAdmin(Handler):
         return {'project': 'peter_sslers',
                 'SslAcmeChallengeLog': item,
                 }
+
+
+    @view_config(route_name='admin:acme_challenge_log:filtered', renderer='/admin/acme_challenge_log-filtered.mako')
+    @view_config(route_name='admin:acme_challenge_log:filtered|json', renderer='json')
+    def acme_challenge_log_filtered(self):
+        wants_json = True if self.request.matched_route.name.endswith('|json') else False
+        dbAcmeAccountKey = None    
+        try:
+            acme_account_key_id = int(self.request.params.get('account-key-id', 0))
+            dbAcmeAccountKey = lib_db.get.get__SslAcmeAccountKey__by_id(self.request.api_context, acme_account_key_id, eagerload_web=False, )
+        except ValueError:
+            pass
+        if not dbAcmeAccountKey:
+            if wants_json:
+                return {'status': 'error',
+                        'error': 'invalid or no account-key-id submitted',
+                        }
+            return HTTPFound("%s/acme-challenge-logs" % self.request.admin_url)
+        
+        items_paged = lib_db.get.get__SslAcmeChallengeLogs__paginated(
+            self.request.api_context,
+            limit=None,
+            offset=0,
+            acme_account_key_id=acme_account_key_id,
+            pending_only=True,
+        )
+        if wants_json:
+                rval = {'filtered_status': "Pending",
+                        'SslAcmeAccountKey': dbAcmeAccountKey.as_json,
+                        'SslAcmeChallengeLogs': [i.as_json for i in items_paged],
+                        }
+                del rval['SslAcmeAccountKey']['key_pem']
+                return rval
+        return {'project': 'peter_sslers',
+                'filtered_status': "Pending",
+                'SslAcmeAccountKey': dbAcmeAccountKey,
+                'SslAcmeChallengeLogs': items_paged,
+                }
+
+
